<?xml version="1.0"?>
<package format="2">
  <name>m1_validator</name>
  <version>0.0.0</version>
  <description>The m1_validator package</description>

  <maintainer email="aoiwatanabe@todo.todo">aoiwatanabe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>m1_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>m1_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>m1_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>gtest</test_depend>

  <export></export>
</package>
